More tweaks in media queries to make sure pre tags don't break the layout and the aside title in the blog stays aligned with the post title

--- a/_scss/_media-queries.scss
+++ b/_scss/_media-queries.scss
@@ -64,6 +64,7 @@
   .blog-aside-title {
     font-size: 46px;
     line-height: 65px;
+    margin-top: 155px;
   }
 }
 
