--- a/_scss/pages/_blog.scss
+++ b/_scss/pages/_blog.scss
@@ -56,6 +56,7 @@
   @extend .post-title;
   margin-bottom: 45px;
   margin-top: 160px;
+  white-space: nowrap;
 }
 
 
